--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
     "mongoose": "^8.6.3"
   }
