--- a/package.json
+++ b/package.json
@@ -13,8 +13,10 @@
   "type": "module",
   "dependencies": {
     "@apollo/server": "^4.11.0",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^16.4.5",
     "graphql": "^16.9.0",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.6.3"
   }
 }
