--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "nodemon index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Sriram Venkatesh",
   "license": "ISC",
   "type": "module",
   "dependencies": {
